--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -16,4 +16,8 @@
     <string name="text_register">注册</string>
     <string name="text_nickname">昵称</string>
     <string name="text_exitlogin">退出登录</string>
+    <string name="title_home">主页</string>
+
+    <!-- TODO: Remove or change this placeholder text -->
+    <string name="hello_blank_fragment">Hello blank fragment</string>
 </resources>
