--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -18,6 +18,10 @@
     <string name="text_exitlogin">退出登录</string>
     <string name="title_home">主页</string>
 
+    <!--something with schedule-->
+    <string name="text_add_schedulebook">添加日程列表</string>
+    <string name="text_add_scheduletitle">输入日程列表标题</string>
+
     <!-- TODO: Remove or change this placeholder text -->
     <string name="hello_blank_fragment">Hello blank fragment</string>
     <string name="appwidget_text">EXAMPLE</string>
