--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -7,7 +7,7 @@
     <string name="tab_home">概览</string>
     <!--something with account-->
     <string name="text_login">登录</string>
-    <string name="title_nologin_description">立即登录，解锁更多定制功能。</string>
+    <string name="title_noLogin_description">立即登录，解锁更多定制功能。</string>
     <string name="text_account">账号</string>
     <string name="text_password">密码</string>
     <string name="title_login">登录MyDay</string>
@@ -15,13 +15,14 @@
     <string name="text_use_local">使用本地账号</string>
     <string name="text_register">注册</string>
     <string name="text_nickname">昵称</string>
-    <string name="text_exitlogin">退出登录</string>
+    <string name="text_exitLogin">退出登录</string>
     <string name="title_home">主页</string>
 
     <!--something with schedule-->
-    <string name="text_add_schedulebook">添加日程列表</string>
-    <string name="text_add_scheduletitle">输入日程列表标题</string>
-    <string name="title_myschedule">我的日程清单</string>
+    <string name="text_add_scheduleBook">添加日程列表</string>
+    <string name="text_add_scheduleTitle">输入日程列表标题</string>
+    <string name="title_mySchedule">我的日程清单</string>
+    <string name="title_sharedSchedule">共享清单</string>
 
     <!-- TODO: Remove or change this placeholder text -->
     <string name="hello_blank_fragment">Hello blank fragment</string>
